trying to fix left nav on mobile
actually trying to fix it for "desktop site" on mobile, Kevin is this really a good use of your time

--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ body {
 
 .container {
   width: 100%;
-  max-width: 950px;
+  max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -68,11 +68,13 @@ nav {
 }
 
 #left-nav {
+  min-width: 150px;
   background-color: #fbfbfb;
   border: thin solid #323232;
   padding: 25px;
   margin-right:25px;
   height: fit-content;
+  overflow: hidden;
 }
 
 #left-nav ul {
